3.6.0/_sources/gallery/style_sheets/index.rst.txt


.. _sphx_glr_gallery_style_sheets:

.. _style_sheet_examples:

Style sheets
============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the style used in the Bayesian Methods for Hackers [1]_ online book.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_bmh_thumb.png
    :alt: Bayesian Methods for Hackers style sheet

  :ref:`sphx_glr_gallery_style_sheets_bmh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian Methods for Hackers style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;dark_background&quot; style, which uses white for elements that are t...">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_dark_background_thumb.png
    :alt: Dark background style sheet

  :ref:`sphx_glr_gallery_style_sheets_dark_background.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dark background style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows an example of the &quot;fivethirtyeight&quot; styling, which tries to replicate the styles fro...">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_fivethirtyeight_thumb.png
    :alt: FiveThirtyEight style sheet

  :ref:`sphx_glr_gallery_style_sheets_fivethirtyeight.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FiveThirtyEight style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;ggplot&quot; style, which adjusts the style to emulate ggplot_ (a pop...">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_ggplot_thumb.png
    :alt: ggplot style sheet

  :ref:`sphx_glr_gallery_style_sheets_ggplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ggplot style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;grayscale&quot; style sheet, which changes all colors that are define...">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_grayscale_thumb.png
    :alt: Grayscale style sheet

  :ref:`sphx_glr_gallery_style_sheets_grayscale.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Grayscale style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows an example of &quot;Solarized_Light&quot; styling, which tries to replicate the styles of:">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_plot_solarizedlight2_thumb.png
    :alt: Solarized Light stylesheet

  :ref:`sphx_glr_gallery_style_sheets_plot_solarizedlight2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solarized Light stylesheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script demonstrates the different available style sheets on a common set of example plots:...">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_style_sheets_reference_thumb.png
    :alt: Style sheets reference

  :ref:`sphx_glr_gallery_style_sheets_style_sheets_reference.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Style sheets reference</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/style_sheets/bmh
   /gallery/style_sheets/dark_background
   /gallery/style_sheets/fivethirtyeight
   /gallery/style_sheets/ggplot
   /gallery/style_sheets/grayscale
   /gallery/style_sheets/plot_solarizedlight2
   /gallery/style_sheets/style_sheets_reference

