3.10.6/_sources/gallery/style_sheets/index.rst.txt


.. _sphx_glr_gallery_style_sheets:

.. _style_sheet_examples:

Style sheets
============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the style used in the Bayesian Methods for Hackers [1]_ online book.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_bmh_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_bmh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian Methods for Hackers style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;dark_background&quot; style, which uses white for elements that are typically black (text, borders, etc). Note that not all plot elements default to colors defined by an rc parameter.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_dark_background_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_dark_background.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dark background style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows an example of the &quot;fivethirtyeight&quot; styling, which tries to replicate the styles from FiveThirtyEight.com.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_fivethirtyeight_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_fivethirtyeight.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FiveThirtyEight style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;ggplot&quot; style, which adjusts the style to emulate ggplot_ (a popular plotting package for R_).">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_ggplot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_ggplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ggplot style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;grayscale&quot; style sheet, which changes all colors that are defined as rcParams to grayscale. Note, however, that not all plot elements respect rcParams.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_grayscale_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_grayscale.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Grayscale style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the &quot;petroff10&quot; style, which implements the 10-color sequence developed by Matthew A. Petroff [1]_ for accessible data visualization. The style balances aesthetics with accessibility considerations, making it suitable for various types of plots while ensuring readability and distinction between data series.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_petroff10_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_petroff10.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petroff10 style sheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows an example of &quot;Solarized_Light&quot; styling, which tries to replicate the styles of:">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_plot_solarizedlight2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_plot_solarizedlight2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solarized Light stylesheet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script demonstrates the different available style sheets on a common set of example plots: scatter plot, image, bar graph, patches, line plot and histogram.">

.. only:: html

  .. image:: /gallery/style_sheets/images/thumb/sphx_glr_style_sheets_reference_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_style_sheets_style_sheets_reference.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Style sheets reference</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/style_sheets/bmh
   /gallery/style_sheets/dark_background
   /gallery/style_sheets/fivethirtyeight
   /gallery/style_sheets/ggplot
   /gallery/style_sheets/grayscale
   /gallery/style_sheets/petroff10
   /gallery/style_sheets/plot_solarizedlight2
   /gallery/style_sheets/style_sheets_reference

